<resources>
    <string name="app_name">Quiz App Learning</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="no_question_found">No question available</string>
</resources>
